--- a/web/build.gradle
+++ b/web/build.gradle
@@ -11,6 +11,8 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
+    compile group: 'org.springframework', name: 'spring-core', version: '5.2.9.RELEASE'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
