--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -12,5 +12,7 @@ repositories {
 dependencies {
     compile project(":model")
     compile project(":web")
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '2.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
