--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -11,8 +11,9 @@ repositories {
 
 dependencies {
     compile project(":model")
-    compile project(":web")
+    compile group: 'org.springframework', name: 'spring-context', version: '5.2.9.RELEASE'
+    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
+    compile group: 'org.springframework', name: 'spring-core', version: '5.2.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: '2.0.6'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
