--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -14,5 +14,6 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-context', version: '5.2.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'junit', name: 'junit', version: '4.13.1'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
