--- a/service/build.gradle
+++ b/service/build.gradle
@@ -10,5 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile project(":model")
+    compile project(":persistence")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
