--- a/web/build.gradle
+++ b/web/build.gradle
@@ -12,6 +12,7 @@ repositories {
 
 dependencies {
     compile project(":persistence")
+    compile project(":service")
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
     compile group: 'org.springframework', name: 'spring-context', version: '5.2.9.RELEASE'
