--- a/service/build.gradle
+++ b/service/build.gradle
@@ -12,5 +12,6 @@ repositories {
 dependencies {
     compile project(":model")
     compile project(":persistence")
+    compile group: 'org.springframework', name: 'spring-tx', version: '5.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
