--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,4 +14,5 @@ dependencies {
     compile project(":persistence")
     compile group: 'org.springframework', name: 'spring-tx', version: '5.3.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
 }
