--- a/web/src/main/resources/db.properties
+++ b/web/src/main/resources/db.properties
@@ -2,3 +2,4 @@ db.driver = com.mysql.jdbc.Driver
 db.url = jdbc:mysql://localhost:3306/GiftShop
 db.username = root
 db.password = 12345678
+db.size = 30
