--- a/web/build.gradle
+++ b/web/build.gradle
@@ -14,9 +14,7 @@ dependencies {
     compile project(":persistence")
     compile project(":service")
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
-    compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
-    compile group: 'org.springframework', name: 'spring-context', version: '5.2.9.RELEASE'
-    compile group: 'org.springframework', name: 'spring-core', version: '5.2.9.RELEASE'
+    providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
