--- a/web/build.gradle
+++ b/web/build.gradle
@@ -15,6 +15,8 @@ dependencies {
     compile project(":service")
     compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
     providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     compile group: 'jstl', name: 'jstl', version: '1.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
