--- a/service/build.gradle
+++ b/service/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     compile project(":persistence")
     compile group: 'org.springframework', name: 'spring-tx', version: '5.3.0'
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-core', version: '2.22.0'
 }
