--- a/persistence/build.gradle
+++ b/persistence/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     compile project(":model")
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.9.RELEASE'
     compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.200'
     testCompile group: 'junit', name: 'junit', version: '4.13.1'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
