--- a/web/build.gradle
+++ b/web/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     compile project(":persistence")
     compile project(":service")
     compile group: 'org.json', name: 'json', version: '20200518'
-    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.2.9.RELEASE'
+    compile group: 'org.springframework', name: 'spring-webmvc', version: '5.3.0'
     providedCompile group: 'javax.servlet', name: 'servlet-api', version: '2.5'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.11.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'
